Calendar event api functionality, remove old functionality calendar v3, load pre-select avatars in settings, change publish profile to appology.uk, add activity, edit/save, user avatar components + style tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ __pycache__/
 /MyCalendar.MVC/Logs/info.txt
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/FullCalendar/package-lock.json
