--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -30,7 +30,7 @@
   <appSettings>
     <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
     <add key="DFM.ExceptionHandling.Sentry.Environment" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="Prod" />
-    <add key="RootUrl" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://calendar.karim-ali.co.uk" />
+    <add key="RootUrl" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://appology.uk" />
   </appSettings>
   <connectionStrings>
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
