--- a/MyCalendar.React/FullCalendar/package.json
+++ b/MyCalendar.React/FullCalendar/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/karimali831/MyCalendarApp#readme",
   "dependencies": {
-    "@appology/react-components": "^1.2.1",
+    "@appology/react-components": "^1.3.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -62,6 +62,7 @@
     "less": "^3.13.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.14.0",
@@ -75,6 +76,7 @@
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "react-loader-spinner": "^3.1.14",
+    "react-moment": "^1.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.1",
