some improvrements and bug fixes to new version and fix to scheduler

--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,4 @@ __pycache__/
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/FullCalendar/package-lock.json
