--- a/MyCalendar.React/FullCalendar/package.json
+++ b/MyCalendar.React/FullCalendar/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/karimali831/MyCalendarApp#readme",
   "dependencies": {
-    "@appology/react-components": "^1.3.9",
+    "@appology/react-components": "^1.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -73,6 +73,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-dev-utils": "^9.1.0",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "react-loader-spinner": "^3.1.14",
