Sidebar menu modifications, new notification alerts in main nav menu replacing current activity in calendar head, implement errand runner step navigator, service/store and items selection.. New models and repos for category, order, trip and notification. ER New address api, (better) and refactoring changes. ER implementation of custom formula to be able to update fees

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,6 @@ __pycache__/
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/ErrandRunner/package-lock.json
+/MyCalendar.React/ErrandRunner/package-lock.json
+/MyCalendar.React/FullCalendar/package-lock.json
