--- a/MyCalendar.React/ErrandRunner/package.json
+++ b/MyCalendar.React/ErrandRunner/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/karimali831/MyCalendarApp#readme",
   "dependencies": {
-    "@appology/react-components": "^1.4.0",
+    "@appology/react-components": "^1.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -28,10 +28,13 @@
     "@fullcalendar/list": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
+    "@material-ui/core": "^4.11.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "@types/chart.js": "^2.9.28",
     "@types/html-minifier": "^3.5.3",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.9",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-redux": "^7.1.12",
     "@types/react-router": "^5.1.8",
@@ -45,6 +48,7 @@
     "babel-preset-react-app": "^9.1.2",
     "base64-inline-loader": "^1.1.1",
     "base64-loader": "^1.0.0",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "classnames": "^2.2.6",
@@ -61,12 +65,15 @@
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^3.3.5",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartjs-2": "^2.11.1",
+    "react-click-outside": "github:tj/react-click-outside",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
