--- a/MyCalendar/MyCalendar.csproj
+++ b/MyCalendar/MyCalendar.csproj
@@ -155,6 +155,7 @@
     <Compile Include="DTOs\Event.cs" />
     <Compile Include="DTOs\EventRequest.cs" />
     <Compile Include="DTOs\Types.cs" />
+    <Compile Include="Enums\Category.cs" />
     <Compile Include="Enums\CronofyStatus.cs" />
     <Compile Include="Enums\DateFrequency.cs" />
     <Compile Include="Enums\Feature.cs" />
@@ -166,11 +167,15 @@
     <Compile Include="Helpers\MVCRoutes.cs" />
     <Compile Include="Helpers\UrlHelper.cs" />
     <Compile Include="Helpers\Utils.cs" />
+    <Compile Include="Model\ER\Trip.cs" />
+    <Compile Include="Model\ER\Order.cs" />
     <Compile Include="Model\ER\Customer.cs" />
     <Compile Include="Model\ExtCalendarRights.cs" />
+    <Compile Include="Model\Category.cs" />
     <Compile Include="Model\Feature.cs" />
     <Compile Include="Model\FeatureGroupRole.cs" />
     <Compile Include="Model\HoursWorkedInTag.cs" />
+    <Compile Include="Model\Notification.cs" />
     <Compile Include="Model\ResourceWithError.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\FeatureRole.cs" />
@@ -182,7 +187,10 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ER\TripRepository.cs" />
+    <Compile Include="Repository\ER\OrderRepository.cs" />
     <Compile Include="Repository\ER\CustomersRepository.cs" />
+    <Compile Include="Repository\CategoryRepository.cs" />
     <Compile Include="Repository\FeatureRepository.cs" />
     <Compile Include="Repository\GroupRepository.cs" />
     <Compile Include="Repository\FeatureRoleRepository.cs" />
@@ -198,8 +206,12 @@
     <Compile Include="Security\SessionPersister.cs" />
     <Compile Include="Service\CronofyService.cs" />
     <Compile Include="Service\DocumentService.cs" />
+    <Compile Include="Service\ER\TripService.cs" />
+    <Compile Include="Service\ER\OrderService.cs" />
     <Compile Include="Service\ER\CustomerService.cs" />
     <Compile Include="Service\FeatureRoleService.cs" />
+    <Compile Include="Service\CategoryService.cs" />
+    <Compile Include="Service\NotificationService.cs" />
     <Compile Include="Service\TypeService.cs" />
     <Compile Include="Service\TagService.cs" />
     <Compile Include="Service\UserService.cs" />
