Errand runner order completion steps  4 & 5 - steps and components refactor with Redux connect, add MOV to formula config, google maps driver locator/selector with directions, order - (save, retrieve and create), stakeholder repository to include customers and drivers, stripe payment implementation,

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,5 @@ __pycache__/
 /MyCalendar.React/ErrandRunner/package-lock.json
 /MyCalendar.React/ErrandRunner/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/ErrandRunner/package-lock.json
