--- a/MyCalendar.React/ErrandRunner/package.json
+++ b/MyCalendar.React/ErrandRunner/package.json
@@ -29,10 +29,13 @@
     "@fullcalendar/react": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
     "@material-ui/core": "^4.11.2",
+    "@stripe/react-stripe-js": "^1.2.0",
+    "@stripe/stripe-js": "^1.11.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/chart.js": "^2.9.28",
     "@types/html-minifier": "^3.5.3",
     "@types/lodash": "^4.14.165",
+    "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^12.19.9",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-loader-spinner": "^3.1.3",
@@ -73,6 +76,7 @@
     "react-click-outside": "github:tj/react-click-outside",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.14.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
@@ -96,6 +100,7 @@
   },
   "devDependencies": {
     "@types/core-js": "^2.5.4",
+    "@types/googlemaps": "^3.43.2",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
