--- a/MyCalendar.React/ErrandRunner/tsconfig.json
+++ b/MyCalendar.React/ErrandRunner/tsconfig.json
@@ -7,6 +7,10 @@
         "*"
       ]
     },
+    "types":[
+        "googlemaps",
+        "markerclustererplus"
+    ],
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
