JQUERY login form, force https for monzo, finance and er new order, remove monzo link from finance app

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,5 @@ __pycache__/
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/FullCalendar/package-lock.json
 /MyCalendar.React/ErrandRunner/package-lock.json
+/Appology.MVC/Scripts/dist/finance/bundle.js
+/Appology.MVC/Scripts/dist/finance/bundle.js.map
