--- a/Appology.React/FullCalendar/package.json
+++ b/Appology.React/FullCalendar/package.json
@@ -20,19 +20,13 @@
   "homepage": "https://github.com/karimali831/MyCalendarApp#readme",
   "dependencies": {
     "@appology/react-components": "^1.4.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
     "@fullcalendar/bootstrap": "^5.4.0",
-    "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/interaction": "^5.4.0",
     "@fullcalendar/list": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "@types/chart.js": "^2.9.28",
-    "@types/html-minifier": "^3.5.3",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.9",
     "@types/react-bootstrap": "^0.32.25",
@@ -62,26 +56,16 @@
     "less": "^3.13.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
-    "react-bootstrap-table-next": "^3.3.5",
-    "react-bootstrap-table2-editor": "^1.4.0",
-    "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-chartjs-2": "^2.11.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-dev-utils": "^9.1.0",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
-    "react-loader-spinner": "^3.1.14",
-    "react-moment": "^1.1.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "react-select": "^3.1.1",
-    "route-parser": "0.0.5",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.2",
@@ -95,8 +79,6 @@
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
-    "@types/core-js": "^2.5.4",
-    "@types/jest": "^24.9.1",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "css-loader": "^3.6.0",
@@ -107,8 +89,7 @@
     "style-loader": "^0.23.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.44.2"
   },
   "jest": {
     "collectCoverageFrom": [
