--- a/Appology/Appology.csproj
+++ b/Appology/Appology.csproj
@@ -168,6 +168,7 @@
     <Compile Include="DTOs\Finance\ReminderDTO.cs" />
     <Compile Include="DTOs\Finance\SpendingDTO.cs" />
     <Compile Include="DTOs\Finance\SpendingSummaryDTO.cs" />
+    <Compile Include="DTOs\ProfileDTO.cs" />
     <Compile Include="Enums\Tables.cs" />
     <Compile Include="Enums\Category.cs" />
     <Compile Include="Enums\Calendar\CronofyStatus.cs" />
