--- a/Appology.React/Profile/package.json
+++ b/Appology.React/Profile/package.json
@@ -23,8 +23,10 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^4.0.12",
     "@types/route-parser": "^0.1.3",
     "autoprefixer": "^9.8.6",
+    "avataaars": "^1.2.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^9.1.2",
@@ -52,9 +54,11 @@
     "react-click-outside": "github:tj/react-click-outside",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.0.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.1",
     "route-parser": "0.0.5",
