Write re-written in React app (removing jquery MVC page), Monzo cats style changes, react-components refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -294,3 +294,4 @@ __pycache__/
 /Appology.React/FinanceApp/package-lock.json
 /Appology.React/FinanceApp/package-lock.json
 /Appology.React/Profile/package-lock.json
+/Appology.React/Profile/package-lock.json
