--- a/Appology.MVC/Appology.MVC.csproj
+++ b/Appology.MVC/Appology.MVC.csproj
@@ -379,6 +379,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Calendar\CalendarAreaRegistration.cs" />
     <Compile Include="Areas\Calendar\CalendarModule.cs" />
+    <Compile Include="Areas\Calendar\Controllers\API\WriteController.cs" />
     <Compile Include="Controllers\API\ProfileController.cs" />
     <Compile Include="ViewModels\TableDetailVM.cs" />
     <Compile Include="ViewModels\ReactAppVM.cs" />
@@ -402,7 +403,6 @@
     <Compile Include="Areas\Calendar\Controllers\API\EventController.cs" />
     <Compile Include="Areas\ER\Controllers\API\ErrandRunnerController.cs" />
     <Compile Include="Areas\Calendar\Controllers\CronofyController.cs" />
-    <Compile Include="Areas\Calendar\Controllers\DocumentController.cs" />
     <Compile Include="Areas\ER\Controllers\OrderController.cs" />
     <Compile Include="Areas\Calendar\Controllers\EventController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -417,13 +417,10 @@
     <Compile Include="Areas\Finance\FinanceModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Areas\Calendar\ViewModels\CalendarVM.cs" />
-    <Compile Include="Areas\Calendar\ViewModels\DocumentMoveVM.cs" />
-    <Compile Include="Areas\Calendar\ViewModels\DocumentVM.cs" />
     <Compile Include="Areas\Calendar\ViewModels\CronofyVM.cs" />
     <Compile Include="Areas\Calendar\ViewModels\Event.cs" />
     <Compile Include="Areas\Calendar\ViewModels\OverviewVM.cs" />
     <Compile Include="Areas\Calendar\ViewModels\SchedulerVM.cs" />
-    <Compile Include="Areas\Calendar\ViewModels\TypeVM.cs" />
     <Compile Include="ViewModels\AvatarVM.cs" />
     <Compile Include="ViewModels\BaseVM.cs" />
     <Compile Include="ViewModels\Error.cs" />
@@ -839,6 +836,7 @@
     <Content Include="Scripts\dist\finance\bundle.js" />
     <Content Include="Scripts\dist\fullcalendar\bundle.js" />
     <Content Include="Scripts\dist\profile\bundle.js" />
+    <Content Include="Scripts\dist\write\bundle.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
@@ -939,6 +937,7 @@
     <Content Include="Scripts\dist\fullcalendar\bundle.js.map" />
     <Content Include="Scripts\dist\finance\bundle.js.map" />
     <Content Include="Scripts\dist\profile\bundle.js.map" />
+    <Content Include="Scripts\dist\write\bundle.js.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -1034,7 +1033,6 @@
     <Content Include="Areas\Calendar\Views\Cronofy\Profiles.cshtml" />
     <Content Include="Areas\Calendar\Views\Cronofy\Calendar.cshtml" />
     <Content Include="Areas\Calendar\Views\Cronofy\Event.cshtml" />
-    <Content Include="Areas\Calendar\Views\Document\Index.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper.js.flow" />
@@ -1051,7 +1049,6 @@
     <Content Include="Views\Home\ChangeLog.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Bootbox.cshtml" />
-    <Content Include="Views\Shared\_FolderSelection.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_ReactApp.cshtml" />
     <Content Include="Views\Shared\_Status.cshtml" />
