--- a/Appology.MVC/Appology.MVC.csproj
+++ b/Appology.MVC/Appology.MVC.csproj
@@ -377,9 +377,12 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Write\WriteAreaRegistration.cs" />
+    <Compile Include="Areas\Write\WriteModule.cs" />
+    <Compile Include="Areas\Write\Controllers\API\WriteController.cs" />
+    <Compile Include="Areas\Write\Controllers\WriteController.cs" />
     <Compile Include="Areas\Calendar\CalendarAreaRegistration.cs" />
     <Compile Include="Areas\Calendar\CalendarModule.cs" />
-    <Compile Include="Areas\Calendar\Controllers\API\WriteController.cs" />
     <Compile Include="Controllers\API\ProfileController.cs" />
     <Compile Include="ViewModels\TableDetailVM.cs" />
     <Compile Include="ViewModels\ReactAppVM.cs" />
@@ -826,6 +829,9 @@
     <Content Include="Content\table-detail\scss\style.scss" />
     <Content Include="Content\table-detail\css\.DS_Store" />
     <Content Include="Areas\Finance\Views\Monzo\Close.cshtml" />
+    <Content Include="Areas\Write\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Write\Views\Write\Index.cshtml" />
+    <Content Include="Areas\Write\Views\Web.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -1066,6 +1072,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\ER\ViewModels\" />
+    <Folder Include="Areas\Write\ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
