--- a/Appology/Appology.csproj
+++ b/Appology/Appology.csproj
@@ -154,12 +154,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\BaseDateFilter.cs" />
-    <Compile Include="DTOs\Calendar\Collaborator.cs" />
+    <Compile Include="DTOs\Write\Collaborator.cs" />
     <Compile Include="DTOs\Calendar\DateFilter.cs" />
-    <Compile Include="DTOs\Calendar\Document.cs" />
+    <Compile Include="DTOs\Write\Document.cs" />
     <Compile Include="DTOs\Calendar\Event.cs" />
     <Compile Include="DTOs\Calendar\EventRequest.cs" />
-    <Compile Include="DTOs\Calendar\Types.cs" />
+    <Compile Include="DTOs\Types.cs" />
     <Compile Include="DTOs\Finance\CategoryDTO.cs" />
     <Compile Include="DTOs\Finance\DateFilter.cs" />
     <Compile Include="DTOs\Finance\FinanceDTO.cs" />
@@ -185,7 +185,7 @@
     <Compile Include="Enums\Finance\PaymentStatus.cs" />
     <Compile Include="Enums\Finance\Priority.cs" />
     <Compile Include="Enums\ER\Stakeholders.cs" />
-    <Compile Include="Enums\Calendar\Types.cs" />
+    <Compile Include="Enums\Types.cs" />
     <Compile Include="Enums\TypeGroup.cs" />
     <Compile Include="Enums\Section.cs" />
     <Compile Include="Enums\Status.cs" />
@@ -217,9 +217,9 @@
     <Compile Include="Model\FeatureRole.cs" />
     <Compile Include="Model\Calendar\Tag.cs" />
     <Compile Include="DTOs\Calendar\Tags.cs" />
-    <Compile Include="Model\Calendar\Document.cs" />
+    <Compile Include="Model\Write\Document.cs" />
     <Compile Include="Model\Role.cs" />
-    <Compile Include="Model\Calendar\Type.cs" />
+    <Compile Include="Model\Type.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Calendar\Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -239,9 +239,9 @@
     <Compile Include="Repository\GroupRepository.cs" />
     <Compile Include="Repository\FeatureRoleRepository.cs" />
     <Compile Include="Repository\Calendar\TagRepository.cs" />
-    <Compile Include="Repository\Calendar\DocumentRepository.cs" />
+    <Compile Include="Repository\Write\DocumentRepository.cs" />
     <Compile Include="Repository\RoleRepository.cs" />
-    <Compile Include="Repository\Calendar\TypeRepository.cs" />
+    <Compile Include="Repository\TypeRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Repository\Calendar\EventRepository.cs" />
     <Compile Include="Security\AccessDeniedController.cs" />
@@ -249,7 +249,7 @@
     <Compile Include="Security\CustomPrincipal.cs" />
     <Compile Include="Security\SessionPersister.cs" />
     <Compile Include="Service\Calendar\CronofyService.cs" />
-    <Compile Include="Service\Calendar\DocumentService.cs" />
+    <Compile Include="Service\Write\DocumentService.cs" />
     <Compile Include="Service\ER\TripService.cs" />
     <Compile Include="Service\ER\OrderService.cs" />
     <Compile Include="Service\ER\StakeholderService.cs" />
@@ -262,7 +262,7 @@
     <Compile Include="Service\Finance\RemindersService.cs" />
     <Compile Include="Service\Finance\SpendingsService.cs" />
     <Compile Include="Service\NotificationService.cs" />
-    <Compile Include="Service\Calendar\TypeService.cs" />
+    <Compile Include="Service\TypeService.cs" />
     <Compile Include="Service\Calendar\TagService.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="Service\Calendar\EventService.cs" />
