--- a/Appology/Appology.csproj
+++ b/Appology/Appology.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Model\Finance\Settings.cs" />
     <Compile Include="Model\Finance\Spending.cs" />
     <Compile Include="Model\Notification.cs" />
+    <Compile Include="Repository\NotificationRepository.cs" />
     <Compile Include="Model\ResourceWithError.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\FeatureRole.cs" />
@@ -272,6 +273,7 @@
     <Compile Include="ViewModels\Finance\MonthComparisonChartVM.cs" />
     <Compile Include="ViewModels\Finance\RemindersVM.cs" />
     <Compile Include="ViewModels\Finance\Summary.cs" />
+    <Compile Include="ViewModels\Write\DocumentTitles.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
