Group events activity together in activity hub, style improvrements and bug fixes and default date filter.  Fixes to appology calendar sync. Recent docs in write fix. Auto save functionality, doc change log implementation. Notifcation functionality improvement IMplmentation of write tags, can assign multiple tags to document and searchable in doc search

--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,6 @@ __pycache__/
 /Appology.React/FinanceApp/package-lock.json
 /Appology.React/Profile/package-lock.json
 /Appology.React/Profile/package-lock.json
+/Appology.MVC/Scripts/dist/write/bundle.js.map
+/Appology.MVC/Scripts/dist/write/bundle.js.map
+/Appology.MVC/Scripts/dist/write/bundle.js
