--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,8 @@ __pycache__/
 /Appology.MVC/Scripts/dist/write/bundle.js.map
 /Appology.MVC/Scripts/dist/write/bundle.js.map
 /Appology.MVC/Scripts/dist/write/bundle.js
+/Appology.MVC/Scripts/dist/errandrunner/bundle.js.map
+/Appology.MVC/Scripts/dist/errandrunner/bundle.js
+/Appology.MVC/Scripts/dist/write/bundle.js
+/Appology.MVC/Scripts/dist/write/bundle.js.map
+/Appology.React/ErrandRunner/package-lock.json
