Errand runnver v1.1.1 -> checklist section to verify order delivery allocation and payment status, implementation of setting delivery date and timeslot, dispatch order as live,  stripe amount verification fix,  manually mark payment as received or unreceived, hide stripe payment diaglogue if stripe payment has been received, changes in step store -> show places and select -> option to also manually search store and select -> code refactoring and imprvements, clear basket and remove item and delete order confirmation dialogues,  fix order fee forumla config, (wasn't popping up), show stripe payment confirmation

--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,7 @@ __pycache__/
 /Appology.MVC/Scripts/dist/write/bundle.js
 /Appology.MVC/Scripts/dist/write/bundle.js.map
 /Appology.React/ErrandRunner/package-lock.json
+/Appology.MVC/Scripts/dist/errandrunner/bundle.js
+/Appology.MVC/Scripts/dist/errandrunner/bundle.js.map
+/Appology.MVC/Scripts/dist/write/bundle.js
+/Appology.React/ErrandRunner/package-lock.json
