--- a/Appology.React/ErrandRunner/package.json
+++ b/Appology.React/ErrandRunner/package.json
@@ -65,6 +65,7 @@
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.13.0",
     "lodash": "^4.17.20",
+    "logrocket": "^1.0.14",
     "moment": "^2.29.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
@@ -80,6 +81,7 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.1.0",
     "react-loader-spinner": "^3.1.14",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
