Initial implementation of Appology administration app, fix with monzo api fetching transactions, update monzo library,  only write files for dapper queries locally, report failed queries to sentry.

--- a/.gitignore
+++ b/.gitignore
@@ -259,51 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/MyCalendar.MVC/Logs/info.txt
-/MyCalendar.MVC/Logs/info.txt
-/MyCalendar.MVC/Scripts/dist/errandrunner/bundle.js
-/MyCalendar.MVC/Scripts/dist/errandrunner/bundle.js.map
-/MyCalendar.MVC/Scripts/dist/fullcalendar/bundle.js
-/MyCalendar.MVC/Scripts/dist/fullcalendar/bundle.js.map
-/MyCalendar.MVC/Logs/info.txt
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/ErrandRunner/package-lock.json
-/MyCalendar.React/ErrandRunner/package-lock.json
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/FullCalendar/package-lock.json
-/MyCalendar.React/ErrandRunner/package-lock.json
-/Appology.MVC/Scripts/dist/finance/bundle.js
-/Appology.MVC/Scripts/dist/finance/bundle.js.map
-/Appology.React/FullCalendar/package-lock.json
-/Appology.React/ErrandRunner/package-lock.json
-/Appology.React/FinanceApp/package-lock.json
-/Appology.MVC/Scripts/dist/fullcalendar/bundle.js
-/Appology.MVC/Scripts/dist/fullcalendar/bundle.js.map
-/Appology.React/FullCalendar/package-lock.json
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js.map
-/Appology.MVC/Scripts/dist/profile/bundle.js
-/Appology.MVC/Scripts/dist/profile/bundle.js.map
-/Appology.React/ErrandRunner/package-lock.json
-/Appology.React/Profile/package-lock.json
-/Appology.MVC/Scripts/dist/finance/bundle.js
-/Appology.MVC/Scripts/dist/finance/bundle.js.map
-/Appology.React/FinanceApp/package-lock.json
-/Appology.React/FinanceApp/package-lock.json
-/Appology.React/Profile/package-lock.json
-/Appology.React/Profile/package-lock.json
-/Appology.MVC/Scripts/dist/write/bundle.js.map
-/Appology.MVC/Scripts/dist/write/bundle.js.map
-/Appology.MVC/Scripts/dist/write/bundle.js
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js.map
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js
-/Appology.MVC/Scripts/dist/write/bundle.js
-/Appology.MVC/Scripts/dist/write/bundle.js.map
-/Appology.React/ErrandRunner/package-lock.json
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js
-/Appology.MVC/Scripts/dist/errandrunner/bundle.js.map
-/Appology.MVC/Scripts/dist/write/bundle.js
-/Appology.React/ErrandRunner/package-lock.json
+/MyCalendar.MVC/Logs/*
+/MyCalendar.MVC/Scripts/dist/*
